@@ -12,12 +12,12 @@ import static org.junit.Assert.assertThat;
 public class NotifyAccountTest {
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Denis Shubko", "eDer3432f"),
                 new Account("142", "Denis Shubko", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Denis Shubko", "eDer3432f"),
                         new Account("142", "Denis Shubko", "000001")
                 )
